<resources>
    <string name="app_name">Notifications</string>

    <string name="hello_world">Hello world!</string>
    <string name="what_notify_label">What do you want to be notified about?</string>
    <string name="when_notify_label">When do you want to be notified?</string>
    <string name="action_settings">Settings</string>
    <string name="time_label">Time</string>
    <string name="time_set_label">Set Time</string>
    <string name="date_label">Date</string>
    <string name="date_set_label">Set Date</string>
    <string name="ok_label">Ok</string>
    <string name="cancel_label">Cancel</string>
    <string name="notify_btn_label">Notify Me</string>
    <string name="save_btn_label">Save Me</string>
    <string name="renotify_btn_label">Re-Notify</string>
    <string name="title_activity_notify_me">Notifications</string>
    <string name="title_activity_notifier">Notifier</string>
    <string name="title_activity_notification_detail">New Notification</string>
    <string name="title_hint">Title</string>
    <string name="note_hint">Text</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="archive_label">Archive</string>
    <string name="share_label">Share</string>
    <string name="edit_label">Edit</string>
    <string name="share_notif_label">Share Notification Content</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="action_search">Search</string>
    <string name="search_results">Search Results</string>
    <string name="search_hint">Search for your note</string>
    <string name="search_text">Search for Note</string>
    <string name="info_label">Legal Notice</string>
    <string name="drive_label">Google Drive Sync</string>
    <string name="syncing">Syncing all Notifications with Google Drive</string>
    <string name="will_notify">Will Notify at </string>
    <string name="notified">Notified at </string>
    <string name="sync_notification">Syncing with Google Drive</string>
    <string name="drive_sync_message">Notifications will now ask for your Google Drive access. \n\nThis will allow the app to back up your saved Notifications to your Google Drive as well as give you the ability to save your notifications to Google Drive, to any folder of your choice.\n\nDo you want to continue?</string>
    <string name="drive_sync_title">Google Drive Sync</string>
    <string name="drive_sync_progress">Syncing with Google Drive</string>
    <string name="force_sync">Force Drive Sync</string>
</resources>
