<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="shetye.prathamesh.notifyme.Notifications">

    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView|always"
        android:icon="@drawable/draw_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/sync"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView|always"
        android:icon="@drawable/draw_memory"
        android:title="@string/info_label" />

    <item
        android:id="@+id/force_sync"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/draw_cloud_up"
        android:title="@string/force_sync" />

    <item
        android:id="@+id/drive"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView|always"
        android:icon="@drawable/draw_cloud"
        android:title="@string/info_label" />

    <item
        android:id="@+id/info"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/draw_info"
        android:title="@string/info_label" />

</menu>
