<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:background="@drawable/recview_rounded"
    android:id="@+id/notif_holder" >

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/item_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/recviewbackground"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:id="@+id/when_to_notify"
            android:textAlignment="center"
            android:transitionName="when_to_notify"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="3dp"
            android:padding="10dp"
            android:gravity="bottom|end"
            android:layout_gravity="bottom|end"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <View
            android:id="@+id/line_view"
            android:transitionName="line_view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/notify_title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:transitionName="notify_title_txt"
            android:isScrollContainer="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:maxLines="5"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:id="@+id/notify_txt"
            android:transitionName="notify_txt"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:maxLines="5"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/item_controllers"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/recviewotherbackground"
        android:layout_height="150dp"
        android:layout_width="fill_parent" >
<!--
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical"
            android:padding="20dp"
            android:clickable="true"
            android:id="@+id/archive_notif"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:minHeight="40dp"
                android:minWidth="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_archive" />
            <TextView
                android:text="@string/archive_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>
-->
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical"
            android:padding="20dp"
            android:clickable="true"
            android:id="@+id/edit_notif"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:minHeight="40dp"
                android:minWidth="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_edit" />
            <TextView
                android:text="@string/edit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical"
            android:padding="20dp"
            android:clickable="true"
            android:id="@+id/re_notif"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:minHeight="40dp"
                android:minWidth="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_restore_bar" />
            <TextView
                android:text="@string/renotify_btn_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical"
            android:padding="20dp"
            android:clickable="true"
            android:id="@+id/share_notif"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:minHeight="40dp"
                android:minWidth="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_share" />
            <TextView
                android:text="@string/share_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>